kbd-chooser (1.22) UNRELEASED; urgency=low

  [ Tollef Fog Heen ]  
  * Nuke obsolete emacs variables from debian/changelog
  * Remove di_info and di_debug defines from kbd-chooser.c, they are
    available through debian-installer.h

 -- Tollef Fog Heen <tfheen@debian.org>  Thu,  1 Dec 2005 11:56:59 +0100

kbd-chooser (1.21) unstable; urgency=low

  [ Alastair McKinstry ]
  * Fix file descriptor error on serial console installs. Closes: #261073;
    thanks to Martin Michlmayr.

  [ Colin Watson ]
  * Make sure our prebaseconfig script exits zero on success.

  [ Frans Pop ]
  * Change template debian-installer/keymap to type string.
  * Use template names to identify keyboard architectures and build translated
    choices list at runtime. Closes: #273384.

 -- Frans Pop <fjp@debian.org>  Sun, 20 Nov 2005 21:21:22 +0100

kbd-chooser (1.20) unstable; urgency=low

  [ Christian Perrier ]
  * Add some comments for translators

  [ Updated translations ]
  * Danish (da.po) by Claus Hindsgaul
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Portuguese (pt.po) by Miguel Figueiredo
  * Slovak (sk.po) by Peter Mann

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 17:04:12 +0200

kbd-chooser (1.19) unstable; urgency=low

  [ Joey Hess ]
  * Stop writing to debootstrap_settings, dropping woody installation support.

  [ Colin Watson ]
  * If a keymap list entry has the same keymap name as a previous one but a
    different language list, create a new keymap for it. This is required to
    select the correct default for Croatian (closes: Ubuntu #14711).
  * Rip out all of the code to manually fetch localised templates; cdebconf
    has known how to deal with this itself since 2002/2003 or so. Patch from
    Matthias Urlichs via Ubuntu.

  [ Frans Pop ]
  * Show option to skip keyboard configuration and use kernel keymap instead
    of the "no keyboard" option (closes: #306334).