@@ -4,6 +4,8 @@ kbd-chooser (1.22) UNRELEASED; urgency=low
   * Nuke obsolete emacs variables from debian/changelog
   * Remove di_info and di_debug defines from kbd-chooser.c, they are
     available through debian-installer.h
+  * Remove irrelevant check from loadkeys.y, irrelevant due to checking if
+    a char is bigger than 256.
 
  -- Tollef Fog Heen <tfheen@debian.org>  Thu,  1 Dec 2005 11:56:59 +0100
 
